# Eidos

./: .env.example  .gitignore  HANDOVER.md  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  cache.rs  commands.rs  db.rs  indexer.rs  main.rs  settings.rs  state.rs
src-tauri/src/search/: aqs_parser.rs  aqs_parser_fixed.rs  metadata.rs  mod.rs  windows_search.rs  windows_search_ole.rs
src/lib/: ChatPane.svelte  CreationPrompt.svelte  EditorPane.svelte  FileCard.svelte  FilterPanel.svelte  PreviewPane.svelte  SettingsPanel.svelte  SettingsWindow.svelte  Sidebar.svelte  SpotlightBar.svelte  StudioWindow.svelte  ToastProvider.svelte  TreeNode.svelte  types.ts
src/lib/stores/: deepSearch.ts  metadataFilters.ts  studio.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/spotlight/: +page.svelte
src/spotlight/: SpotlightApp.svelte
