[package]
name = "eidos"
version = "1.0.0"
description = "Eidos void-to-entity desktop engine"
authors = ["Eidos"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rayon = "1"
jwalk = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
dirs = "6"
dotenvy = "0.15"
open = "5"
uuid = { version = "1", features = ["v4"] }
atomicwrites = "0.4"
base64 = "0.22"
window-vibrancy = "0.6"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Registry", "Win32_System_Search", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
